set wraper div z-index to -1 to prevent blocking login/reg links

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -80,7 +80,7 @@ body::before {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1;
   opacity: 0;
   background: url(focus.png) no-repeat center center;
   -webkit-background-size: cover;
